2007-04-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/community.R (community.to.membership) : added
	* interfaces/R/src/rinterface.c (R_igraph_community_to_membership) : 
	added

	* interfaces/R/igraph/community.R (fastgreedy.community) : added
	* interfaces/R/src/rinterface.c (R_igraph_community_fastgreedy) : added

2007-04-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/community.R (.memberDend)
	(as.dendrogram.igraph.walktrap, as.dendrogram.igraph.ebc) : added

	* interfaces/R/igraph/community.R (edge.betweenness.community)
	(walktrap.community) : 'labels' argument added
	
	* interfaces/R/igraph/R/community.R (edge.betweenness.community) : 
	'merges' and 'bridges' options added
	(edge.betweenness.community.merges) : added
	* interfaces/R/src/rinterface.c 
	(R_igraph_community_edge_betweenness) : 'merges' and 'bridges' 
	arguments added
	(R_igraph_community_eb_get_merges) : added

2007-04-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_spinglass_community)
	(R_igraph_spinglass_my_community, R_igraph_walktrap_community) : updated
	after renames
	
	* interfaces/R/igraph/R/community.R 
	(edge.betweenness.community) : optionally return eb values
	* interfaces/R/src/rinterface.c 
	(R_igraph_community_edge_betweenness) : updated

2007-04-02  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/community.R 
	(edge.betweenness.community) : added
	* interfaces/R/src/rinterface.c 
	(R_igraph_community_edge_betweenness) : added

	* interfaces/R/igraph/R/structural.properties.R 
	(topological.sort) : added
	* interfaces/R/src/rinterface.c (R_igraph_topological_sorting) : added

	* interfaces/R/igraph/R/community.R (walktrap.community) : added
	* interfaces/R/src/rinterface.c (R_igraph_walktrap_community) : added

2007-03-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph, read.graph.graphdb) :
	support added for graphdb format
