@@ -1,3 +1,9 @@
+2007-04-07  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/community.R (modularity) : rewritten to call
+	C function
+	* interfaces/R/src/rinterface.c (R_igraph_modularity) : added
+
 2007-04-06  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/community.R (community.to.membership) : added
